重构api request与response参数生成逻辑

--- a/src/main/java/com/liuxz/request/view/WellRequestToolWindow.form
+++ b/src/main/java/com/liuxz/request/view/WellRequestToolWindow.form
@@ -29,7 +29,7 @@
               <toolTipText value=""/>
             </properties>
           </component>
-          <grid id="1b906" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
+          <grid id="1b906" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -50,7 +50,7 @@
               </component>
               <component id="35110" class="javax.swing.JComboBox" binding="responseStatusComboBox">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <editable value="false"/>
@@ -71,6 +71,23 @@
                     <item value="DELETE"/>
                     <item value="PUT"/>
                     <item value="PATCH"/>
+                  </model>
+                </properties>
+              </component>
+              <component id="c988f" class="javax.swing.JComboBox" binding="platformTypeComboBox">
+                <constraints>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <model>
+                    <item value="iOS_4.0.0"/>
+                    <item value="iOS_10.0.0"/>
+                    <item value="Android_4.0.0"/>
+                    <item value="Android_10.0.0"/>
+                    <item value="wechatApplet_4.0.0"/>
+                    <item value="wechatApplet_10.0.0"/>
                   </model>
                 </properties>
               </component>
@@ -350,10 +367,10 @@
               </scrollpane>
             </children>
           </tabbedpane>
-          <grid id="8e079" binding="wikiJPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="20" left="10" bottom="20" right="30"/>
+          <grid id="8e079" binding="wikiJPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="10" left="10" bottom="20" right="30"/>
             <constraints>
-              <tabbedpane title="wiki"/>
+              <tabbedpane title="Wiki"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -361,9 +378,9 @@
               <grid id="5fac5" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="600"/>
-                    <maximum-size width="-1" height="600"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="200"/>
+                    <maximum-size width="-1" height="500"/>
                   </grid>
                 </constraints>
                 <properties/>
@@ -371,24 +388,22 @@
                 <children>
                   <component id="961d1" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <maximum-size width="-1" height="600"/>
-                      </grid>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Req"/>
+                      <text value="  Req  "/>
                     </properties>
                   </component>
                   <scrollpane id="6f6ff">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <maximum-size width="-1" height="600"/>
-                      </grid>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <horizontalScrollBarPolicy value="31"/>
+                    </properties>
                     <border type="none"/>
                     <children>
-                      <component id="5bb0c" class="javax.swing.JTextArea" binding="apiRequestTextArea">
+                      <component id="5bb0c" class="javax.swing.JPanel" binding="apiRequestTextArea" custom-create="true">
                         <constraints/>
                         <properties/>
                       </component>
@@ -399,9 +414,9 @@
               <grid id="8ee23" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="300"/>
-                    <maximum-size width="-1" height="300"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="100"/>
+                    <maximum-size width="-1" height="200"/>
                   </grid>
                 </constraints>
                 <properties/>
@@ -409,24 +424,20 @@
                 <children>
                   <component id="9f6b5" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <maximum-size width="-1" height="300"/>
-                      </grid>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Res"/>
+                      <text value="  Res  "/>
                     </properties>
                   </component>
                   <scrollpane id="de238">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                        <maximum-size width="-1" height="300"/>
-                      </grid>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="55e91" class="javax.swing.JTextArea" binding="apiResponseTextArea">
+                      <component id="55e91" class="javax.swing.JPanel" binding="apiResponseTextArea" custom-create="true">
                         <constraints/>
                         <properties/>
                       </component>
@@ -434,13 +445,13 @@
                   </scrollpane>
                 </children>
               </grid>
-              <grid id="43d19" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="43d19" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="35"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="50"/>
                     <preferred-size width="-1" height="35"/>
-                    <maximum-size width="-1" height="35"/>
+                    <maximum-size width="-1" height="50"/>
                   </grid>
                 </constraints>
                 <properties/>
@@ -453,23 +464,36 @@
                       </grid>
                     </constraints>
                     <properties>
-                      <text value="Des"/>
+                      <text value="  Des  "/>
                     </properties>
                   </component>
                   <component id="1a09b" class="javax.swing.JTextField" binding="apiDescTextField">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <maximum-size width="-1" height="30"/>
                       </grid>
                     </constraints>
                     <properties/>
                   </component>
+                  <component id="e8fe6" class="javax.swing.JRadioButton" binding="needTokenRadioButton">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="100" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="Token"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
-              <grid id="c5cb" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="30" vgap="10">
+              <grid id="c5cb" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="45" vgap="10">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="50"/>
+                    <maximum-size width="-1" height="50"/>
+                  </grid>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -498,6 +522,39 @@
                       <text value=""/>
                     </properties>
                   </component>
+                </children>
+              </grid>
+              <grid id="b39de" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <maximum-size width="-1" height="100"/>
+                  </grid>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="2e6de" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Quote"/>
+                    </properties>
+                  </component>
+                  <scrollpane id="1c0d6">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="b2903" class="javax.swing.JTextArea" binding="apiQuoteTextArea">
+                        <constraints/>
+                        <properties/>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
               </grid>
             </children>
